OAK-11636: Adding enricher status to document